--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=styleshelf
 
 spring.datasource.url=jdbc:mysql://localhost:3306/styleshelf
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Amos@2026
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
